# advent-of-code-2024

./: Cargo.toml
.cargo/: config.toml
day-1/: Cargo.toml
day-1/src/: main.rs
day-10/: Cargo.toml
day-10/src/: entities.rs  main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-2/src/entities/: report.rs
day-3/: Cargo.toml
day-3/src/: entities.rs  main.rs
day-3/src/entities/: mul_expression.rs  parser.rs  syntax.pest
day-4/: Cargo.toml
day-4/src/: main.rs  xmas_symbol.rs
day-5/: Cargo.toml
day-5/src/: main.rs  page_rule.rs  test
day-6/: Cargo.toml
day-6/src/: main.rs  map_element.rs
day-7/: Cargo.toml
day-7/src/: calibration.rs  main.rs
day-8/: Cargo.toml
day-8/src/: antenna.rs  main.rs
day-9/: Cargo.toml
day-9/src/: file_block.rs  main.rs
src/: main.rs
src/day-1/: Cargo.toml
src/day-1/src/: main.rs
src/day-2/: Cargo.toml
src/day-2/src/: main.rs
src/day-2/src/entities/: report.rs
utils/array_utils/: Cargo.toml
utils/array_utils/src/: coordinate.rs  lib.rs
utils/file_reader/: Cargo.toml
utils/file_reader/src/: file_reader.rs
utils/macro_utils/: Cargo.toml
utils/macro_utils/src/: lib.rs
