[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "day-1", "day-10",
    "day-2",
    "day-3",
    "day-4", 
    "day-5",
    "day-6", "day-7", "day-8", "day-9",
]

[workspace.dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
itertools = "0.13.0"
file_reader = { path = "utils/file_reader" }
array_utils = { path = "utils/array_utils" }
macro_utils = { path = "utils/macro_utils" }
